# routes/index.js
@@ -1,8 +1,8 @@
 const express = require('express')
 const router = express.Router()
 
-router.get('/', require('./contacts'))
+router.get('/', require('./koreanIdol'))
 router.use('/', require('./swagger'))
-router.use('/contacts', require('./contacts'))
+router.use('/koreanIdol', require('./koreanIdol'))
 
 module.exports = router
